--- a/src/main/resources/db/liquibase.properties
+++ b/src/main/resources/db/liquibase.properties
@@ -1,4 +1,4 @@
-changeLogFile: db/changelog/changelog.xml
-url: jdbc:postgresql://127.0.0.1:5432/dreamjob
+changeLogFile: db/changelog.xml
+url: jdbc:postgresql://localhost:5432/cars
 username: postgres
 password: Okhorzina2912
