3. Лямбды и шаблон Command [#49295] - скорректированы настройки liquibase в файлах-конфигурациях - общее поведение CRUD операций вынесено в отдельный класс CrudRepository - применен шаблон проектирования Command - упросил код в лкассе UserRepository

--- a/src/main/resources/db/liquibase.properties
+++ b/src/main/resources/db/liquibase.properties
@@ -1,4 +1,4 @@
-changeLogFile: db/changelog.xml
+changeLogFile: db/changelog/changelog.xml
 url: jdbc:postgresql://localhost:5432/cars
 username: postgres
 password: Okhorzina2912
