--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
             <!--    профиль test мы делаем профилем по умолчанию, потому что сборка проекта
                     по умолчанию должна собираться без настроек окружения-->
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
         </profile>
         <profile>
@@ -41,6 +41,9 @@
             <properties>
                 <liquibase.config>db/liquibase.properties</liquibase.config>
             </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
         </profile>
     </profiles>
 
