--- a/.github/workflows/gitActions.yml
+++ b/.github/workflows/gitActions.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Step 3 - Build Maven Project
         run: |
           mvn validate
-          mvn install
+          mvn install -X
 
       - name: Step 4 - Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
