8. Интеграционные тесты для проект job4j_cars [#4746] - добавлены скрипты для заполнения таблиц случайными данными (скрипты не применены); - добавлены фото машин; - добавлена аннотация @Builder во все модели; - добавлена конфигурация hibernate.cfg.xml в тестовую папку; - дополнены остальные файлы конфигураций;

--- a/src/main/resources/db/liquibase-test.properties
+++ b/src/main/resources/db/liquibase-test.properties
@@ -1,4 +1,4 @@
-changeLogFile: db/changelog/changelog.xml
+changeLogFile: db/changelog/changelog-test.xml
 driver: org.h2.Driver
 # Именно с testdb (не test) собирается проект. Наверное, потому что именно такая БД уже существует.
 # Перед /testdb обязательно должна быть ".", а не тильда "~" как в мануалах.
