3. Тестовое задание. Hibernate. [#330581] - настройки проекта

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,6 @@ spring:
     multipart:
       # Указываем максимальный размер файла (по умолчанию 1MB, что неудобно, т.к. некоторые изображения могут весить много)
       max-file-size: 10MB
+  mvc:
+    format:
+      date: yyyy-MM-dd
