--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,23 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.9.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.5.5.Final</version>
+        </dependency>
+        <!--    Ниже зависимость нужна, чтоб появились новые классы querydsl-->
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-jpa</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+        <!--    Ниже annotation processor нужен собсно, чтобы генерировать нужную модель-->
+        <dependency>
+            <groupId>com.querydsl</groupId>
+            <artifactId>querydsl-apt</artifactId>
+            <version>5.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -129,6 +146,7 @@
                         <phase>validate</phase>
                         <configuration>
                             <configLocation>checkstyle.xml</configLocation>
+                            <sourceDirectories>src/main/java</sourceDirectories>
                             <consoleOutput>true</consoleOutput>
                             <failsOnError>true</failsOnError>
                             <includeTestSourceDirectory>true</includeTestSourceDirectory>
@@ -180,6 +198,27 @@
                             <goal>clearCheckSums</goal>
                             <goal>update</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--    This plugin makes sure that the Q-types are generated during the process goal of the Maven build-->
+            <plugin>
+                <groupId>com.mysema.maven</groupId>
+                <artifactId>apt-maven-plugin</artifactId>
+                <version>1.1.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>process</goal>
+                        </goals>
+                        <configuration>
+                            <!--    Здесь указываем директорию генерированных файлов. По хорошему она должна быть там,
+                                    где собирается проект. В нашем случае это папка "target" >>>>> "generated-sources".
+                                    Для нас это вроде как стандартная папка.-->
+                            <outputDirectory>target/generated-sources/java</outputDirectory>
+                            <!--    Здесь мы подключаем JPAAnnotationProcessor. AnnotationProcessor-ы бывают разные если что..-->
+                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
